@@ -1,0 +1,4 @@
+$NetBSD: distinfo,v 1.1.1.1 2003/12/17 19:27:29 jdolecek Exp $
+
+SHA1 (Log-1.7.0.tgz) = 012b23b013a435cd6581161a30f46178e32841bd
+Size (Log-1.7.0.tgz) = 14384 bytes
